--- a/frontweb/src/Componentes/Navbar/styles.css
+++ b/frontweb/src/Componentes/Navbar/styles.css
@@ -1,26 +1,36 @@
-.main-nav{
+.main-nav {
     padding-left: 40px;
-    height: 50px;
+    min-height: 50px;
 }
 
-.nav-logo-text, .nav-logo-text:hover{
+.nav-logo-text,
+.nav-logo-text:hover {
     color: white;
     text-decoration: none;
 }
-.main-menu{
-    
+
+.main-menu {
+
     display: flex;
     font-size: 18px;
     width: 580px;
     justify-content: space-between;
 }
-.main-menu a{
-    color: rgba(255,255,255,0.5);
+
+.main-menu a {
+    color: rgba(255, 255, 255, 0.5);
 }
-.main-menu a:hover{
+
+.main-menu a:hover {
     color: white;
 }
-.main-menu a.active{
+
+.main-menu a.active {
     font-weight: 700;
-    color:white;
+    color: white;
+}
+
+.login-site {
+    padding-left: 80px;
+    color: white;
 }
