--- a/frontweb/src/Componentes/Buttonicon/styles.css
+++ b/frontweb/src/Componentes/Buttonicon/styles.css
@@ -1,7 +1,36 @@
-.btn-icon{
+.btn-container{
+    display: flex;           
+}
 
-    
+.btn-icon-container{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 50px;
     height: 50px;
+    border-radius: 0px 10px 10px 0px;
+    background-color: #33569b     
+}
+
+.btn-btn h6{
+    color: #fff;
+    font-size: 12px;
+    text-transform: uppercase;    
+}
+
+.botao{
+    border-radius: 10px 0px 0px 10px;
     
+}
+
+@media (min-width: 576px ){
+    .btn-icon-container{      
+        width: 70px;
+        height: 70px;           
+    }
+
+    .btn-btn h6{
+        font-size: 18px;            
+    }
 
 }
